sfdx-source/packaged/main/core/objects/InvoiceLineItem__c/InvoiceLineItem__c.object-meta.xml
<CustomObject>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>OLI Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>