sfdx-source/packaged/main/core/objects/InvoiceLineItem__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <formula>Price__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Calculated "Net" amount, that is without taxes</description>
    <inlineHelpText>Net Amount (without taxes)</inlineHelpText>
    <label>Amount (Net)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>