sfdx-source/packaged/main/core/objects/InvoiceLineItem__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Percent discount given on the Amount</description>
    <inlineHelpText>Enter percent discount on Net Amount</inlineHelpText>
    <label>Discount</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
    <defaultValue>0.00</defaultValue>
</CustomField>