sfdx-source/packaged/main/core/objects/InvoiceLineItem__c/fields/GrossAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossAmount__c</fullName>
    <formula>Amount__c * (1 + Tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Calculated "Gross" amount, that is with taxes</description>
    <inlineHelpText>Gross Amount (including taxes)</inlineHelpText>
    <label>Amount (Gross)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>