sfdx-source/packaged/main/core/objects/InvoiceLineItem__c/fields/Productname__c.field-meta.xml
<CustomField>
    <fullName>Productname__c</fullName>
    <formula>LEFT(BLANKVALUE(Product__r.Name, Description__c), 50) + IF(LEN(BLANKVALUE(Product__r.Name, Description__c)) > 50, '...', '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Evaluates the Product Name from Lookup to display as Text in Visualforce. If the lookup is empty, returns the description instead.</description>
    <label>Name</label>
    <type>Text</type>
</CustomField>