sfdx-source/packaged/main/core/objects/InvoiceLineItem__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Quantity Unit of Measure, derived from related product upon creation</description>
    <inlineHelpText>The unit of measure for this line item</inlineHelpText>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>